# compactor-vllm

./: .gitignore  README.md  pyproject.toml
compactor_vllm/attention/: compile_kernels.py  sparse_decode_kernel.py  sparse_varlen_kernel.py
compactor_vllm/benchmark/: sparse_varlen_benchmark.py
compactor_vllm/compression/: __init__.py  compactor.py  compression_config.py  snapkv.py
compactor_vllm/config/: constants.py
compactor_vllm/core/: llm_engine.py  memory_manager.py  model_runner.py  scheduler.py
compactor_vllm/kv_cache/: write_page_table.py
compactor_vllm/layers/: activation.py  attention.py  linear.py  rotary_embedding.py  sampler.py
compactor_vllm/models/: __init__.py  qwen3.py  qwen3_moe.py
compactor_vllm/triton_kernels/: compaction.py  matmul_ogs.py  proton_opts.py  routing.py  specialize.py  topk.py
compactor_vllm/triton_kernels/compaction_details/: _masked_compaction.py
compactor_vllm/triton_kernels/matmul_ogs_details/: _common.py  _matmul_ogs.py  opt_flags.py
compactor_vllm/triton_kernels/routing_details/: _expt_data.py  _routing_compute.py
compactor_vllm/triton_kernels/topk_details/: _topk_forward.py
compactor_vllm/utils/: arguments.py  sequence.py
evaluate/: eval_longbench.py  eval_ruler.py  longbench_metrics.py  ruler_metrics.py
evaluate/longbench_config/: dataset2prompt.json
src/compactor_vllm/: __init__.py
src/compactor_vllm/attention/: compile_kernels.py
src/compactor_vllm/compression/: __init__.py  common.py
src/compactor_vllm/config/: engine_config.py  (+1 more)
tests/: test_store_kv.py  test_triton_attention.py
(+29 files in other folders)
